# dice-hash

./: .gitignore  Blake2Xb_8hpp_source.html  Blake2b_8hpp_source.html  Blake3_8hpp_source.html  CMakeLists.txt  Container__trait_8h.html  Container__trait_8h__dep__incl.map  Container__trait_8h__dep__incl.md5  Container__trait_8h__incl.map  Container__trait_8h__incl.md5  Container__trait_8h_source.html  Container__trait_8hpp.html  Container__trait_8hpp__dep__incl.map  Container__trait_8hpp__dep__incl.md5  Container__trait_8hpp__incl.map  Container__trait_8hpp__incl.md5  Container__trait_8hpp_source.html  DiceHashDefinitions_8hpp.html  DiceHashDefinitions_8hpp__dep__incl.map  DiceHashDefinitions_8hpp__dep__incl.md5  DiceHashDefinitions_8hpp__incl.map  DiceHashDefinitions_8hpp__incl.md5  DiceHashDefinitions_8hpp_source.html  DiceHashPolicies_8hpp_source.html  DiceHash_8hpp.html  DiceHash_8hpp__dep__incl.map  DiceHash_8hpp__dep__incl.md5  DiceHash_8hpp__incl.map  DiceHash_8hpp__incl.md5  DiceHash_8hpp_source.html  Dockerfile  Doxyfile  LICENSE  LICENSE-MIT  LtHash_8hpp_source.html  MathEngine_8hpp_source.html  MathEngine__Hwy_8hpp_source.html  MathEngine__Simple_8hpp_source.html  README.md  annotated.html  (+284 more)
.github/workflows/: code_testing.yml  conan_upload.yml  detect-pobr-diff.yml  documentation.yml  publish-conan-branch-package.yml  publish-release.yml  single_header_file.yml
cmake/: boilerplate_init.cmake  conan_cmake.cmake  install_interface_library.cmake  install_library.cmake  version.hpp.in
examples/: CMakeLists.txt  basicUsage.cpp  blake2b.cpp  blake2xb.cpp  blake3.cpp  combineHashes.cpp  customContainer.cpp  customPolicy.cpp  customType.cpp  ltHash.cpp  policyUsage.cpp  usageForUnorderedSet.cpp
include/Dice/: hash.hpp
include/Dice/hash/: Container_trait.h  Container_trait.hpp  DiceHash.hpp  DiceHashDefinitions.hpp  DiceHashPolicies.hpp  martinus_robinhood_hash.hpp  xxhash.hpp
include/Dice/hash/internal/: DiceHashPolicies.hpp  martinus_robinhood_hash.hpp  wyhash.h
include/dice/: hash.hpp
include/dice/hash/: DiceHash.hpp  version.hpp
include/dice/hash/blake/: Blake2b.hpp
include/dice/hash/blake/internal/blake3/: CMakeLists.txt
include/dice/hash/blake2/: Blake2Xb.hpp  Blake2b.hpp  Blake2xb.hpp
include/dice/hash/blake2xb/: Blake2xb.hpp
include/dice/hash/internal/: Container_trait.hpp  DiceHashPolicies.hpp  martinus_robinhood_hash.hpp  wyhash.h  xxhash.hpp
include/dice/hash/internal/blake2xb/: Blake2xb.hpp
include/dice/hash/internal/lthash/: Blake2xb.cpp  Blake2xb.hpp  LtHash.hpp  MathEngine.hpp  MathEngine_AVX2.hpp  MathEngine_SSE2.hpp  MathEngine_Simple.hpp
include/dice/hash/lthash/: LtHash.hpp  MathEngine.hpp  MathEngine_AVX2.hpp  MathEngine_Hwy.cpp  MathEngine_SSE2.hpp  MathEngine_Simple.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+9 more)
src/: CMakeLists.txt
src/dice/hash/blake/: Blake2Xb.hpp  Blake3.hpp
src/dice/hash/blake/internal/blake3/: .gitignore  CMakeLists.txt
src/dice/hash/lthash/: LtHash.hpp  MathEngine.hpp  MathEngine_AVX2.hpp  MathEngine_Hwy.cpp  MathEngine_Hwy.hpp  MathEngine_SSE2.hpp  MathEngine_Simple.hpp
src/wyhash/: CMakeLists.txt  wyhash.cc  wyhash.h
src/wyhash/internal/: config.h  endian.h  int128.h  int128_have_intrinsic.inc  unaligned_access.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: BenchmarkBlake2xb.cpp  BenchmarkLtHash_AVX2.cpp  BenchmarkLtHash_Hwy.cpp  BenchmarkLtHash_SSE2.cpp  BenchmarkLtHash_simple.cpp  BenchmarkLtHash_template.hpp  CMakeLists.txt  TestBlake2Xb.cpp  TestBlake2b.cpp  TestBlake2xb.cpp  TestBlake2xb_data.hpp  TestDiceHash.cpp  TestLtHash.cpp  TestLtHash_AVX2.cpp  TestLtHash_Hwy.cpp  TestLtHash_SSE2.cpp  TestLtHash_metall.cpp  TestLtHash_metall_common.hpp  TestLtHash_metall_phase1.cpp  TestLtHash_metall_phase2.cpp  TestLtHash_simple.cpp  TestLtHash_template.hpp
tests/conanPackageTest/: CMakeLists.txt  Dockerfile  build.sh  conanfile.txt  main.cpp
